# rip_router

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
include/: checkoptn.h  server-fsm.h
include/lib/: ifconfig.h  receive.h  rip.h  send.h
src/: checkoptn.def  main.c
src/lib/: ifconfig.c  receive.c  rip.c  send.c
tests/: CMakeLists.txt
tests/suites/: CMakeLists.txt  suites1.c
tex/: report.tex
utils/: makefile2dot  makesimple
